--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,6 +36,20 @@ body {
   color: hsl(var(--text-20))
 }
 
+.group > div:nth-child(2) > div {
+  padding: 6px 8px;
+}
+
+.group > div:nth-child(1) {
+  padding: 6px 8px;
+}
+
+.group {
+  padding-right: 4px !important;
+  padding-left: 4px !important;
+  padding-top: 4px !important;
+}
+
 @layer base {
   :root {
     --text: 240, 10%, 4%;
