This code is so cooked :fire:

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,6 +69,14 @@ body {
   transition: width 0.2s ease;
 }
 
+.smallWidth {
+  padding: 1rem 20% !important
+}
+
+.hideScrollbar {
+  scrollbar-width: none;
+}
+
 @layer base {
   :root {
     --foreground: var(--text);
